# MDContainer

executor-main/: Dockerfile  Dockerfile2  README.md  docker-compose.yml  pyproject.toml  test.db
executor-main/app/: helpers.py  main.py  myballs.py  pythonExecutor.py
executor-main/app/PythonSafeEval/: Dockerfile_template_javascript.txt  __init__.py  safe_eval.py
executor-main/app/PythonSafeEval/.jailfs/safe_eval_python26d9fe40-866e-4826-9422-9bcfe4cd6bb7/: Dockerfile
executor-main/app/PythonSafeEval/settings/: seccomp_profile.json
executor-main/scripts/: build.sh  test.sh
executor-main/tests/: test_main.py
