[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sample Healthcare"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
braintrust = "^0.0.158"
autoevals = "^0.0.90"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
openai = "^1.50.2"
pydantic = "^2.9.2"
pgvector = "0.2.5"
sentry-sdk = {extras = ["fastapi"], version = "^2.15.0"}
joblib = "^1.4.2"
xgboost = "^2.1.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
sqlacodegen = {extras = ["pgvector"], version = "3.0.0rc5"}
pyright = "^1.1.387"

[tool.black]
line-length = 88
target_version = ['py312']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
    | generated
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
skip_glob = ["**/generated/**"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
